--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -6,30 +6,33 @@
       <p>You are 30 seconds away from becoming a registered user!</p>
     </div>
     <div class="col-md-9 register-right">
-
       <div class="tab-content" id="myTabContent">
           <h3 class="register-heading">Register as a Student</h3>
+        <form #myForm ="ngForm" (ngSubmit)="onSubmit(myForm)" >
           <div class="row register-form">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="First Name *" [(ngModel)]="firstName"  />
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" class="form-control" name="firstName" placeholder="First Name *" [(ngModel)]="firstName">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="lastName" placeholder="Last Name *" [(ngModel)]="lastName">
+                </div>
+
               </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Last Name *" [(ngModel)]="lastName"  />
+              <div class="col-md-6">
+
+                <div class="form-group">
+                  <input type="email" class="form-control" name="email" placeholder="Your Email *" [(ngModel)]="email">
+                </div>
+                <div class="form-group">
+                  <input type="text" minlength="10" maxlength="10" name="phoneNumber" class="form-control" placeholder="Your Phone *" [(ngModel)]="phoneNumber">
+                </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email *" [(ngModel)]="email"  />
+              <div class="col-12 text-center">
+                <input type="submit" class="btnRegister"  value="Register">
               </div>
-              <div class="form-group">
-                <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" [(ngModel)]="phoneNumber" />
-              </div>
-            </div>
-            <div class="col-12 text-center">
-              <input type="submit" class="btnRegister"  value="Register"/>
-            </div>
           </div>
+        </form>
         </div>
       </div>
     </div>
