--- a/src/app/find-one/find-one.component.html
+++ b/src/app/find-one/find-one.component.html
@@ -1,18 +1,13 @@
-<div class="container register">
-  <div class="row">
-    <div class="col-md-3 register-left">
-      <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
-      <h3>Student Search</h3>
-    </div>
-    <div class="col-md-9 register-right">
 
-      <div class="tab-content" id="myTabContent">
-        <h3 class="register-heading">Search</h3>
-        <div class="active-cyan-3 active-cyan-4 mb-4">
-          <input class="form-control" type="text" placeholder="User Id *" aria-label="Search"/>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="whole">
+<div class="search__container">
+  <p class="search__title">
+      Search for student details.
+  </p>
+  <input class="search__input" type="text" placeholder="Search">
+</div>
 
+<div class="btn__container">
+      <button class="btn" type="submit">Search</button>
+</div>
 </div>
