--- a/src/app/find-one/find-one.component.html
+++ b/src/app/find-one/find-one.component.html
@@ -2,7 +2,7 @@
 <div class="whole">
 <div class="search__container">
   <p class="search__title">
-      Search for student details.
+      Enter Students UserID for details.
   </p>
   <input class="search__input" type="text" placeholder="Search">
 </div>
