--- a/src/app/find-one/find-one.component.html
+++ b/src/app/find-one/find-one.component.html
@@ -1,13 +1,15 @@
 
 <div class="whole">
+  <form #myForm ="ngForm" (ngSubmit)="onSubmit(myForm)" >
 <div class="search__container">
   <p class="search__title">
       Enter Students UserID for details.
   </p>
-  <input class="search__input" type="text" placeholder="Search">
+  <input class="search__input" type="text" placeholder="Search" [(ngModel)]="search">
 </div>
 
 <div class="btn__container">
       <button class="btn" type="submit">Search</button>
 </div>
+  </form>
 </div>
